--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+/*
+    COLORS
+*/
 *,
 *::after,
 *::before {
@@ -28,11 +31,11 @@ body {
   padding-right: .6rem;
   padding-left: .6rem; }
 
-.authentication-form {
+.authentication {
   width: 100%;
   display: block;
   text-align: center; }
-  .authentication-form__tabs {
+  .authentication__tabs {
     display: flex;
     justify-content: center;
     list-style-type: none;
@@ -47,39 +50,92 @@ body {
     cursor: pointer;
     letter-spacing: .1rem;
     font-weight: 500; }
-    .authentication-form__tabs--signin {
+    .authentication__tabs--signin {
       background-color: white;
       width: 100%;
       height: 5rem;
       border-right: .1px solid #F4F4F6;
       padding: 1rem 0 1rem 3rem; }
-      .authentication-form__tabs--signin-a {
+      .authentication__tabs--signin-a {
         color: #454F63 !important; }
-      .authentication-form__tabs--signin__border {
-        border-bottom: .5rem solid #3497FD;
+      .authentication__tabs--signin__border {
+        border-bottom: 0.5rem solid #3497FD;
         opacity: 0;
         padding-top: 9%;
         transition: opacity .3s ease; }
-        .authentication-form__tabs--signin__border-a {
+        .authentication__tabs--signin__border-a {
           opacity: 1; }
-    .authentication-form__tabs--register {
+    .authentication__tabs--register {
       background-color: white;
       width: 100%;
       height: 5rem;
       padding: 1rem 3rem 1rem 0; }
-      .authentication-form__tabs--register-a {
+      .authentication__tabs--register-a {
         color: #454F63 !important; }
-      .authentication-form__tabs--register__border {
-        border-bottom: .5rem solid #3497FD;
+      .authentication__tabs--register__border {
+        border-bottom: 0.5rem solid #3497FD;
         opacity: 0;
         padding-top: 9%;
         transition: opacity .3s ease; }
-        .authentication-form__tabs--register__border-a {
+        .authentication__tabs--register__border-a {
           opacity: 1; }
+  .authentication__form {
+    background-color: white;
+    margin: 6rem auto 0;
+    max-width: 44rem; }
+    .authentication__form--group {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 2rem; }
+      .authentication__form--group-text {
+        color: #3497FD;
+        font-size: 1.4rem;
+        text-align: left; }
+      .authentication__form--group-input {
+        border: none;
+        border-bottom: 1px solid #868686;
+        outline: none;
+        height: 3.2rem;
+        line-height: 1;
+        font-size: 1.6rem; }
+        .authentication__form--group-input_red {
+          border-color: #f44336; }
+    .authentication__form--error {
+      text-align: left;
+      font-size: 1.2rem;
+      color: #f44336;
+      margin-top: .5rem; }
+    .authentication__form--terms {
+      width: 100%;
+      font-size: 1.4rem;
+      font-weight: 100;
+      line-height: 1.7;
+      text-align: left;
+      margin: 5rem 0; }
+      .authentication__form--terms_text {
+        color: #868686; }
+      .authentication__form--terms_link {
+        color: #3497FD;
+        cursor: pointer; }
 
-form {
-  background-color: white;
-  margin-top: 5rem; }
+.button {
+  text-transform: uppercase;
+  color: white;
+  display: flex;
+  justify-content: center;
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 1.3;
+  outline: none;
+  cursor: pointer; }
+  .button-blue {
+    width: 100%;
+    background-color: rgba(52, 151, 253, 0.9);
+    min-height: 4rem;
+    border-radius: 10rem;
+    letter-spacing: 3px; }
+    .button-blue:hover {
+      background-color: #3497FD; }
 
 .header {
   display: flex;
