--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,9 @@ body {
   padding-right: .6rem;
   padding-left: .6rem; }
 
+.margin-top-medium {
+  margin-top: 5rem !important; }
+
 .authentication {
   width: 100%;
   display: block;
@@ -83,6 +86,19 @@ body {
     background-color: white;
     margin: 6rem auto 0;
     max-width: 44rem; }
+    .authentication__form--controls {
+      display: flex;
+      justify-content: space-between;
+      font-size: 1.6rem; }
+      .authentication__form--controls-forgot {
+        color: #3497FD;
+        cursor: pointer; }
+      .authentication__form--controls-remember_text {
+        cursor: pointer; }
+      .authentication__form--controls-remember_switch {
+        position: absolute;
+        top: 2px;
+        margin-left: 1rem; }
     .authentication__form--group {
       display: flex;
       flex-direction: column;
@@ -110,8 +126,7 @@ body {
       font-size: 1.4rem;
       font-weight: 100;
       line-height: 1.7;
-      text-align: left;
-      margin: 5rem 0; }
+      text-align: left; }
       .authentication__form--terms_text {
         color: #868686; }
       .authentication__form--terms_link {
