--- a/public/sass/base/_utilities.scss
+++ b/public/sass/base/_utilities.scss
@@ -7,6 +7,14 @@
     padding-left: .6rem;
 }
 
+.margin-top-huge {
+    margin-top: 15rem !important;
+}
+
+.margin-top-big {
+    margin-top: 10rem !important;
+}
+
 .margin-top-medium {
     margin-top: 5rem !important;
 }
