--- a/public/sass/layout/_header.scss
+++ b/public/sass/layout/_header.scss
@@ -1,11 +1,14 @@
 .header {
-    display: flex;
-    flex-direction: column;
+    display: block;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    transition: top 1s;
 
     padding: 1.5rem;
     font-size: 1.4rem;
     color: black;
-    margin-bottom: 1rem;
+    background-color: white;
 
     &__top {
         display: flex;
