--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,15 @@
 /*
+    MEDIA QUERIES MANAGER
+
+    $breakpoint argument choices:
+    - phone
+    - tab-port
+    - tab-land
+    - big-desktop
+
+    1em = 16px
+*/
+/*
     COLORS
 */
 *,
@@ -10,6 +21,15 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
@@ -25,7 +45,7 @@ body {
   color: black; }
 
 .padding-small-right {
-  padding: .6rem; }
+  padding-right: .6rem; }
 
 .padding-small-right-left {
   padding-right: .6rem;
@@ -95,6 +115,9 @@ body {
     background-color: white;
     margin: 6rem auto 0;
     max-width: 44rem; }
+    @media (max-width: 37.5em) {
+      .authentication__form {
+        padding: 0 3rem; } }
     .authentication__form--controls {
       display: flex;
       justify-content: space-between;
@@ -180,19 +203,25 @@ body {
   font-size: 1.4rem;
   color: black;
   background-color: white; }
+  @media (max-width: 56.25em) {
+    .header-clock {
+      width: 40vw;
+      font-size: 2rem;
+      padding-top: .5rem; }
+      .header-clock-icon {
+        display: none; } }
   .header__top {
     display: flex;
     justify-content: space-between;
     padding: .5rem; }
-    .header__top--lang-form__item {
-      transition: all .4s;
-      cursor: pointer; }
-    .header__top--lang-form__active {
-      font-weight: 600; }
-    .header__top--lang-form:hover .header__top--lang-form__item:not(:hover) {
-      opacity: .3; }
+    @media (max-width: 56.25em) {
+      .header__top {
+        padding-bottom: 2rem; } }
     .header__top--signin {
       text-transform: uppercase; }
+    @media (max-width: 56.25em) {
+      .header__top--wrap-logout {
+        display: none; } }
     .header__top--logout-username {
       font-weight: 500; }
     .header__top--logout-text {
@@ -206,19 +235,117 @@ body {
     padding: .5rem; }
     .header__bottom--logo {
       width: 20rem; }
+      @media (max-width: 56.25em) {
+        .header__bottom--logo {
+          width: 40vw; } }
     .header__bottom--right {
       display: flex;
       justify-content: right; }
+      @media (max-width: 56.25em) {
+        .header__bottom--right_number {
+          display: none; } }
+      @media (max-width: 56.25em) {
+        .header__bottom--right_country {
+          position: absolute;
+          right: 5vw;
+          top: 2rem;
+          font-size: 2rem; } }
     .header__bottom--right > * {
       margin-left: 4.8rem; }
-  .header__nav {
-    display: flex;
-    justify-content: space-between; }
-    .header__nav--item {
+      @media (max-width: 56.25em) {
+        .header__bottom--right > * {
+          margin-left: 0; } }
+
+.lang-form__list {
+  list-style-type: none; }
+  @media (max-width: 56.25em) {
+    .lang-form__list {
+      display: none; } }
+
+.lang-form__select {
+  display: none; }
+  @media (max-width: 56.25em) {
+    .lang-form__select {
+      display: block;
+      border: none;
+      font-size: 2rem;
+      outline: none; } }
+
+.lang-form__item {
+  float: left;
+  transition: all .4s;
+  cursor: pointer; }
+
+.lang-form__active {
+  font-weight: 600; }
+
+.lang-form:hover .lang-form__item:not(:hover) {
+  opacity: .3; }
+
+.nav {
+  background-color: white; }
+  .nav__list-wrap {
+    display: table;
+    margin: 0 auto;
+    position: relative; }
+    @media (max-width: 56.25em) {
+      .nav__list-wrap {
+        display: block;
+        position: fixed;
+        top: 7rem;
+        right: -50rem;
+        width: 25vw;
+        height: 100%;
+        transition: right 1s; } }
+  .nav__list {
+    list-style-type: none; }
+    @media (max-width: 56.25em) {
+      .nav__list {
+        height: 100%; } }
+  .nav--item {
+    display: inline;
+    padding-right: 6vw;
+    background-color: white; }
+    @media (max-width: 75em) {
+      .nav--item {
+        padding-right: 4vw; } }
+    @media (max-width: 56.25em) {
+      .nav--item {
+        display: inline-block;
+        width: 100%;
+        z-index: 999;
+        padding: 2rem 2rem;
+        border-bottom: 1px solid black;
+        border-left: 1px solid black; } }
+    .nav--item-last {
+      padding-right: 0; }
+    .nav--item > a {
       text-decoration: none;
       color: black;
       text-transform: uppercase;
-      font-weight: bold;
-      transition: all .3s; }
-    .header__nav:hover .header__nav--item:not(:hover) {
-      opacity: .3; }
+      font-weight: bold; }
+  .nav:hover .nav--item:not(:hover) {
+    opacity: .3; }
+    @media (max-width: 75em) {
+      .nav:hover .nav--item:not(:hover) {
+        opacity: 1; } }
+  .nav--wrap-logout {
+    display: none; }
+    @media (max-width: 56.25em) {
+      .nav--wrap-logout {
+        display: block; } }
+  .nav__toggle-btn {
+    display: none; }
+    @media (max-width: 56.25em) {
+      .nav__toggle-btn {
+        display: block;
+        position: absolute;
+        top: 7rem;
+        right: 4vw;
+        transition: right 1s; }
+        .nav__toggle-btn--part {
+          display: block;
+          width: 5vw;
+          height: .3rem;
+          background: black;
+          margin: 1vw 0; } }
