--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -11,5 +11,7 @@
 @import 'components/button';
 
 @import 'layout/header';
+@import 'layout/language-form';
+@import 'layout/navbar';
 
 @import 'pages/home';
