--- a/public/sass/components/_auth.scss
+++ b/public/sass/components/_auth.scss
@@ -70,6 +70,10 @@
         margin: 6rem auto 0;
         max-width: 44rem;
 
+        @include respond(phone) {
+            padding: 0 3rem;
+        }
+
         &--controls {
             display: flex;
             justify-content: space-between;
