--- a/public/sass/layout/_header.scss
+++ b/public/sass/layout/_header.scss
@@ -10,30 +10,36 @@
     color: black;
     background-color: white;
 
+    &-clock {
+        @include respond(tab-port) {
+            width: 40vw;
+            font-size: 2rem;
+            padding-top: .5rem;
+
+            &-icon {
+                display: none;
+            }
+        }
+    }
+
     &__top {
         display: flex;
         justify-content: space-between;
 
         padding: .5rem;
 
-        &--lang-form {
-
-            &__item {
-                transition: all .4s;
-                cursor: pointer;
-            }
-
-            &__active {
-                font-weight: 600;
-            }
-
-            &:hover &__item:not(:hover) {
-                opacity: .3;
-            }
+        @include respond(tab-port) {
+            padding-bottom: 2rem;
         }
 
         &--signin {
             text-transform: uppercase;
+        }
+
+        &--wrap-logout {
+            @include respond(tab-port) {
+                display: none;
+            }
         }
 
         &--logout {
@@ -61,32 +67,38 @@
 
         &--logo {
             width: 20rem;
+
+            @include respond(tab-port) {
+                width: 40vw;
+            }
         }
 
         &--right {
             display: flex;
             justify-content: right;
+
+            &_number {
+                @include respond(tab-port) {
+                    display: none;
+                }
+            }
+
+            &_country {
+                @include respond(tab-port) {
+                    position: absolute;
+                    right: 5vw;
+                    top: 2rem;
+                    font-size: 2rem;
+                }
+            }
         }
 
         &--right > * {
             margin-left: 4.8rem;
-        }
-    }
 
-    &__nav {
-        display: flex;
-        justify-content: space-between;
-
-        &--item {
-            text-decoration: none;
-            color: black;
-            text-transform: uppercase;
-            font-weight: bold;
-            transition: all .3s;
-        }
-
-        &:hover &--item:not(:hover) {
-            opacity: .3;
+            @include respond(tab-port) {
+                margin-left: 0;
+            }
         }
     }
 }
