--- a/public/sass/layout/_header.scss
+++ b/public/sass/layout/_header.scss
@@ -46,6 +46,10 @@
 
             &-username {
                 font-weight: 500;
+
+                @include respond(tab-port) {
+                    margin-bottom: 2rem;
+                }
             }
 
             &-text {
@@ -54,7 +58,12 @@
             }
 
             & > * {
-                padding-left: 7rem;;
+                padding-left: 7rem;
+
+                @include respond(tab-port) {
+                    display: inline-block;
+                    padding: 0;
+                }
             }
         }
     }
