--- a/public/sass/layout/_navbar.scss
+++ b/public/sass/layout/_navbar.scss
@@ -9,9 +9,9 @@
         @include respond(tab-port) {
             display: block;
             position: fixed;
-            top: 7rem;
-            right: -50rem;
-            width: 25vw;
+            top: 0;
+            right: -40rem;
+            width: 40vw;
             height: 100%;
             transition: right 1s;
         }
@@ -36,15 +36,22 @@
         
         @include respond(tab-port) {
             display: inline-block;
+            text-align: center;
             width: 100%;
             z-index: 999;
             padding: 2rem 2rem;
             border-bottom: 1px solid black;
-            border-left: 1px solid black;
+            border-left: 2px solid black;
         }
 
         &-last {
             padding-right: 0;
+
+            &-small {
+                @include respond(tab-port) {
+                    border-bottom: 2px solid black;
+                }
+            }
         }
 
         & > a {
@@ -52,10 +59,19 @@
             color: black;
             text-transform: uppercase;
             font-weight: bold;
+            transition: opacity .4s;
+
+            @include respond(tab-port) {
+                font-size: 2rem;
+            }
+
+            @include respond(phone) {
+                font-size: 1.1rem;
+            }
         }
     }
 
-    &:hover &--item:not(:hover) {
+    &:hover &--item a:not(:hover) {
         opacity: .3;
 
         @include respond(tab-land) {
@@ -88,6 +104,20 @@
                 background: black;
                 margin: 1vw 0;
             }
+        }
+    }
+
+    &__close-btn {
+        display: none;
+
+        @include respond(tab-port) {
+            display: block;
+            position: absolute;
+            top: -5rem;
+            right: 42vw;
+            font-size: 3rem;
+            cursor: pointer;
+            transition: top 1s;
         }
     }
 }
