--- a/public/sass/layout/_navbar.scss
+++ b/public/sass/layout/_navbar.scss
@@ -9,11 +9,10 @@
         @include respond(tab-port) {
             display: block;
             position: fixed;
-            top: 0;
-            right: -40rem;
+            top: -70rem;
+            right: 0;
             width: 40vw;
-            height: 100%;
-            transition: right 1s;
+            transition: top 1s;
         }
     }
 
